--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
             padding: 0;
             margin: 0;
         }
+
+        .img-fluid {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 
 <body style="text-align: center;">
-    <img src="site.jpg" alt="">
+    <img src="site.jpg" alt="" class="img-fluid">
 </body>
 
 </html>
