--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body style="text-align: center;">
-    <img src="site.jpg" alt="" class="img-fluid">
+    <img src="site2.jpg" alt="" class="img-fluid">
 </body>
 
 </html>
